--- a/src/components/ListPoke.css
+++ b/src/components/ListPoke.css
@@ -3,7 +3,10 @@
     float: left;
     padding: 20px 0;
     background: #f5ae46d6;
+    display: flex;
+    flex-direction: column;
 }
+
 .flex-center {
     display: flex;
     justify-content: center;
@@ -17,6 +20,18 @@
     cursor: pointer;
     position: relative;
 }   
+
+.head-listpoke {
+    margin: 0 20px;
+    text-shadow: 1px 2px #f7f6f6;
+    background: #ffe6c3;
+    width: 200px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 18px;
+    padding-bottom: 7px;
+    color: #666;
+}
 
 @media(max-width : 745px){
     .container-poke {
