--- a/src/components/MyPokes.css
+++ b/src/components/MyPokes.css
@@ -3,6 +3,8 @@
     padding: 20px 0;
     display: flex;
     flex-direction: column;
+    max-height: 90vh;
+    overflow: auto;
 }
 
 .container-my-pokes{
